refresh GetAuth, Login. reliz jwt
